--- a/index.html
+++ b/index.html
@@ -75,6 +75,51 @@
         </div>
       </section>
     </main>
+    <div class="header-content">
+      <h1>Gallery</h1>
+    </div>
+    <main>
+      <section class="gallery">
+        <div class="gallery-images">
+          <img
+            src="https://images.pexels.com/photos/1444442/pexels-photo-1444442.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Photography Image 1"
+          />
+          <img
+            src="https://images.pexels.com/photos/3865895/pexels-photo-3865895.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Photography Image 2"
+          />
+          <img
+            src="https://images.pexels.com/photos/2060239/pexels-photo-2060239.jpeg?auto=compress&cs=tinysrgb&w=600"
+            alt="Photography Image 3"
+          />
+          <img
+            src="https://images.pexels.com/photos/248077/pexels-photo-248077.jpeg?auto=compress&cs=tinysrgb&w=600"
+            alt="Photography Image 4"
+          />
+          <img
+            src="https://images.pexels.com/photos/2174662/pexels-photo-2174662.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Photography Image 5"
+          />
+          <img
+            src="https://images.pexels.com/photos/8887078/pexels-photo-8887078.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Photography Image 6"
+          />
+          <img
+            src="https://images.pexels.com/photos/12426868/pexels-photo-12426868.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Photography Image 7"
+          />
+          <img
+            src="https://images.pexels.com/photos/4105332/pexels-photo-4105332.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Photography Image 8"
+          />
+          <img
+            src="https://images.pexels.com/photos/5433151/pexels-photo-5433151.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="Photography Image 9"
+          />
+        </div>
+      </section>
+    </main>
 
     <footer>
       <p>&copy; 2023 Photography Business. All Rights Reserved.</p>
