--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photography Business Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li class="active"><a href="/index.html">Home</a></li>
-          <li><a href="/gallery.html">Gallery</a></li>
-          <li><a href="/about.html">About Us</a></li>
-          <li><a href="/contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
       <div class="header-content">
         <h1>Photography Business</h1>
         <p>Capturing your memories and moments</p>
@@ -120,7 +116,64 @@
         </div>
       </section>
     </main>
+    <div class="header-content">
+      <h1>About Us</h1>
+    </div>
+        <main>
+      <section class="about">
+        <div class="about-text">
+          <h2>
+            Welcome to our photography website, where images come to life!
+          </h2>
+          <p>
+            Our passion for photography is reflected in every image we capture.
+            We believe that every moment is unique, and it's our job to freeze
+            that moment in time through our lenses.
+          </p>
 
+          <p>
+            Our website is home to a stunning collection of photographs that
+            showcase the beauty of the world around us. From majestic landscapes
+            to intimate portraits, each photograph tells a story that is waiting
+            to be explored.
+          </p>
+
+          <p>
+            We are proud to offer a wide range of photography services,
+            including portrait sessions, event photography, and fine art prints.
+            Our team of skilled photographers is dedicated to providing you with
+            exceptional service and creating images that you will cherish for a
+            lifetime.
+          </p>
+          <p>
+            Thank you for choosing our photography website, and we look forward
+            to capturing your memories!
+          </p>
+        </div>
+      </section>
+    </main>
+    <h1>Contact Us</h1>
+        <main>
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+      <div class="social-links">
+        <h2>Connect With Us:</h2>
+        <a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.pinterest.com"><i class="fab fa-pinterest"></i></a>
+      </div>
+    </main>
     <footer>
       <p>&copy; 2023 Photography Business. All Rights Reserved.</p>
     </footer>
