--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photography Business Website</title>
+    <title>Jayneel Pandya Photography</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="header-content">
-        <h1>Photography Business</h1>
+        <h1>Welcome to Jayneel Pandya Photography Website</h1>
         <p>Capturing your memories and moments</p>
         <a href="#" class="button">Book Now</a>
       </div>
@@ -152,7 +152,9 @@
         </div>
       </section>
     </main>
-    <h1>Contact Us</h1>
+    <div class="header-content">
+      <h1>Contact Us</h1>
+    </div>
         <main>
       <form>
         <label for="name">Name:</label>
